# AudioVis

./: .gitignore  .gitmodules  CMakeLists.txt  GenerateProjects.bat  premake5.lua
Visualizer/: default.yaml  premake5.lua
Visualizer/res/config/: config.yaml  default.yaml
Visualizer/res/shaders/: freq.frag  freq.vert
Visualizer/src/: Application.cpp  Application.hpp  Audio.hpp  Player.cpp  Player.hpp  Source.cpp  Visualizer.cpp  Visualizer.hpp
Visualizer/src/Audio/: Audio.cpp  Audio.hpp  Spectrum.cpp  Spectrum.hpp
Visualizer/src/Config/: Color.hpp  Config.cpp  Config.hpp  Configurable.hpp  FileDialog.cpp  FileDialog.hpp  YAMLStream.cpp  YAMLStream.hpp
Visualizer/src/Config/Types/: Color.cpp  Color.hpp  Configurable.hpp  Vec.hpp
Visualizer/src/Config/Viewers/: ColorPicker.hpp  ColorViewer.hpp  NullViewer.hpp  Slider.hpp  Viewer.hpp
